The first thing I did was I extracted all of the epub files to HTML. I used the convert-to-html.py. 
It adds links back to the toc at the top of every page. 
Don't run this code again or it will overwrite the extracted_book folders which have all the stuff. 

The next thing I did after creating the directory was changed the 'the-style-epub.css' file to make the font bigger. 
I had to do this in all three folders because I didn't want to go change the filepath in every textbook html page. 
 - The font size is on line 931. I changed 931 to 20px and linewidth on line 932 to 1.5. 
 - I added the following lines in the root style stuff
  margin-inline-start: 100px;
  margin-inline-end: 100px;
 - I commented out the section on line 1252 to 1254 that affects max width
 - I added the styling for the textarea just under the root stuff. It was:
textarea {
  font-family: Courier, monospace;
  font-size: 16px; 
  line-height: 1.1;
  color: #311b1d;
  background-color: #dbe4de5c;
}
 - I commented out the line around 1134 on the style sheet that has
 nav#toc > ol > .os-toc-unit > ol > .os-toc-chapter > ol > .os-toc-composite-chapter > ol {
  display: none;
}
This was causing the problems and equations and other chapter summary items to be hidden from the toc

I also added the style sheet link to each of the table of contents files. 
I added it just under the title in the head section of the file. 

The convert-to-html.py added a link to table of contents at the top of the table of contents page, so I
replaced it with a back to index link. 