@@ -721,7 +721,10 @@ def print(*args):
           singleLineStringErrors: false
         }, 
         lineNumbers: true, 
+        showInvisibles: true,
+        lineWrapping: true,
         indentUnit: 4, 
+        tabSize: 4,
         matchBrackets: true
       }); 
       editor.setValue(page_code_defaults[i]); 
